2011-12-25  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* VERSION, aprx.c, TODO, INSTALL, doc/aprx-manual.*:
	    Version 2.03

	* aprx.h, config.c, dprsgw.c, logrotate.aprx.in,
	  aprx.conf.in, aprx-complex.conf.in:
	    Configurability of logging parameter "dprslog".

	* aprx.h, aprsis.c, beacon.c, igate.c, telemetry.c:
	    Supply qcode on outgoing packets depending it being
	    locally generated (qAS) or rx-i-gated (qAR)

	* telemetry.c:
	    Fix telemetry "tocall" to use software identifier,
	    and to put "TCPIP*" on APRSIS beacon path.

	* aprx.conf.in:
	    Fix default server list

	* crc.c, kiss.c:
	    Document polynomes and fix comments

2011-08-29  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* parse_aprs.c:
	    F4FXL found bug in position parser cos() pre-calculator.
	    Input needs to be in radians, it was in degrees.

2011-07-26  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c:
	    If preceding address processing detects an error, do not call
	    packet transmitter.

	* aprx.h, dprsgw.c, parse_aprs.c:
	    Moved DPRS related APRS symbol translation from parse_aprs.c
	    to dprsgw.c.

	* parse_aprs.c:
	    Introduced APRS symbol mapper/generator for GPS messages.

	* parse_aprs.c:
	    Rewrite of parse_aprs_mice() degrees parser inspired by F4FXL.

2011-03-16  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* beacon.c, telemetry.c, aprx.h, interface.c:
	    Transmit only radio data port related beacons,
	    and telemetry. Don't touch on other pseudo-interfaces.

2011-01-02  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c, agwpesocket.c, aprx.h:
	    Configure <interface> agwpe-device.

	* netresolv.c:
	    Oops..  fixed functionality. Tuned debugging.

	* aprsis.c, aprx.c:
	    Tuned debugging.

	* configure.in, aprsis.c:
	    Autoconfig stdarg.h existence, use varargs on debug printout code.

	* agwpesocket.c:
	    Debug printout on received frame.

	* interface.c, doc/aprx-manual.odt: